2006-12-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c: added a "Don't ask me again" toggle
	to the EXIF rotation query dialog. Store the user's choice in the
	"exif-orientation-rotate" parasite.

	* devel-docs/parasites.txt: document the new global parasite.

2006-12-20  Sven Neumann  <sven@gimp.org>

	* configure.in: set variable GIMP_COMMAND depending on whether
	gimp-remote is being built or not.

	* desktop/gimp.applications.in (command)
	* desktop/gimp.desktop.in.in (Exec): use @GIMP_COMMAND@. Fixes
	bug #361768.

2006-12-20  Sven Neumann  <sven@gimp.org>

	* data/tips/gimp-tips.xml.in: changed tip based on a suggestion
	from David Gowers. Corrected menu location of Curves and Levels
	tools.

2006-12-18  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c (edit_actions): changed
	"undo-editor-popup" to "undo-popup". This was forgotten in the fix
	for #345251. Fixes bug #386960.

2006-12-18  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c: cleaned up the code that shows the toolbox when
	the last display is closed.

2006-12-18  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpbrushcore.c (gimp_brush_core_interpolate): applied
	patch from Aurore D that improves jitter for brushes with an angle
	close to 90° (bug #386061).

2006-12-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-icc-profile.[ch]
	* plug-ins/common/lcms.c: removed run-mode argument from
	plug-in-icc-profile-info. Added new procedure to obtain information
	about a color profile on disk.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpprofilechooserdialog.[ch]: added a first draft
	of a file-chooser dialog for selecting a color profile.

	* app/dialogs/preferences-dialog.c: use it.

2006-12-18  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.[ch]
	* libgimpwidgets/gimpwidgets.def: added new function
	gimp_prop_file_chooser_button_new_with_dialog().

2006-12-16  Mukund Sivaraman  <muks@mukund.org>
